--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   <div class="container">
     <section class="hero" aria-label="Présentation et réservation">
       <div class="hero-text">
-        <h1>Chauffeur privé à Perpignan</h1>
+        <h1>Chauffeur VTC à Perpignan</h1>
         <p>Réservez en quelques secondes — confort et fiabilité.</p>
 
         <div class="main-button">
