--- a/services.html
+++ b/services.html
@@ -2,136 +2,197 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nos services - OuassVTC</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nos services VTC à Perpignan - OuassVTC</title>
+  <meta name="description" content="Découvrez tous les services de OuassVTC à Perpignan : transferts aéroports et gares, trajets locaux ou longue distance, déplacements professionnels et mise à disposition. Réservez 24h/24 au 06 44 12 07 84.">
+  <meta name="keywords" content="VTC Perpignan, chauffeur privé Perpignan, transfert aéroport, gare Perpignan, VTC 66, taxi Perpignan, transport professionnel, OuassVTC">
+
   <style>
-    :root{
-      --brand:#000;
-      --border:#e5e7eb;
-      --bg:#f5f5f5;
+    :root {
+      --brand: #000;
+      --border: #e5e7eb;
+      --bg: #f5f5f5;
     }
-    *{box-sizing:border-box;margin:0;padding:0}
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: Arial, sans-serif;
       background-color: var(--bg);
       color: #333;
       margin: 0;
-      padding: 0;
+      line-height: 1.6;
     }
-
-    header{
-      background:#000;
-      color:#fff;
-      text-align:center;
-      padding:24px 16px;
+    header {
+      background: var(--brand);
+      color: #fff;
+      text-align: center;
+      padding: 24px 16px;
     }
-    header img{max-height:90px;height:auto;width:auto}
-
+    header img {
+      max-height: 90px;
+      height: auto;
+      width: auto;
+    }
+    main {
+      max-width: 850px;
+      margin: 28px auto;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 4px 16px rgba(0,0,0,.08);
+      padding: 28px 20px 60px;
+    }
+    h1, h2 {
+      color: #000;
+    }
     h1 {
       text-align: center;
-      margin: 26px 0 18px;
-      font-size: 1.6rem;
+      font-size: 1.8rem;
+      margin-bottom: 16px;
     }
-
-    .services-container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 0 16px 100px; /* espace pour bouton flottant */
-    }
-
     h2 {
+      font-size: 1.2rem;
+      margin-top: 26px;
+      margin-bottom: 8px;
+    }
+    a {
       color: #000;
-      margin-top: 22px;
-      font-size:1.15rem;
+      font-weight: 600;
+      text-decoration: none;
     }
-
-    p {
-      margin-bottom: 15px;
-      color:#555;
-      line-height:1.5;
+    ul {
+      margin-left: 22px;
+      color: #555;
     }
-
-    /* Bouton flottant noir */
-    .btn-black{
-      position:fixed;
-      bottom:22px;
-      right:22px;
-      background-color: var(--brand);
-      color:#fff;
-      border:1px solid var(--brand);
-      border-radius:9999px;
-      padding:14px 24px;
-      font-weight:700;
-      font-size:15px;
-      text-decoration:none;
-      cursor:pointer;
-      transition:opacity .25s, transform .25s, box-shadow .25s;
-      box-shadow:0 6px 18px rgba(0,0,0,.25);
-      z-index:100;
-    }
-    .btn-black:hover{
-      opacity:.9;
-      transform:translateY(-2px);
-      box-shadow:0 8px 22px rgba(0,0,0,.35);
-    }
-
-    footer{
-      font-size:13px;
-      color:#777;
-      text-align:center;
-      padding:18px 12px 28px;
-    }
-
-    @media (max-width:600px){
-      .btn-black{
-        right:12px;
-        bottom:12px;
-        padding:12px 18px;
-        font-size:14px;
-      }
+    footer {
+      font-size: 13px;
+      color: #777;
+      text-align: center;
+      padding: 18px 12px 28px;
+      background: #000;
+      color: #fff;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="ouassvtc.png" alt="OuassVTC">
+    <img src="ouassvtc.png" alt="OuassVTC - Chauffeur VTC à Perpignan">
   </header>
 
-  <main class="services-container">
-    <h1>Nos services</h1>
+  <main>
+    <h1>Nos services VTC à Perpignan</h1>
+
+    <p>Bienvenue chez <strong>OuassVTC</strong>, votre service de <strong>chauffeur VTC à Perpignan</strong> et dans tout le département des <strong>Pyrénées-Orientales (66)</strong>.
+      Nous assurons vos déplacements privés, professionnels ou touristiques, dans les meilleures conditions de confort et de ponctualité.
+    </p>
+    <p>Que vous soyez un habitant du 66, un voyageur de passage ou un professionnel en déplacement,
+      <strong>OuassVTC</strong> vous propose des trajets sur mesure, disponibles <strong>24h/24 et 7j/7</strong>,
+      à un tarif fixe connu à l’avance. Notre mission : vous transporter en toute sérénité, sans attente ni stress.
+    </p>
 
     <h2>🚖 Transferts aéroports & gares</h2>
-    <p>OuassVTC vous conduit en toute sérénité vers les aéroports et gares de la région, avec ponctualité et professionnalisme.</p>
+    <p>
+      Besoin d’un transfert vers ou depuis un aéroport ou une gare ? OuassVTC vous conduit avec fiabilité et ponctualité vers les principales destinations :
+      <strong>Perpignan</strong>, <strong>Béziers</strong>, <strong>Gérone</strong>, <strong>Barcelone</strong>, <strong>Toulouse</strong> ou <strong>Montpellier</strong>.
+    </p>
+    <p>
+      Votre chauffeur suit les horaires de votre vol ou de votre train en temps réel, pour s’adapter en cas de retard ou d’avance.
+      Pas d’attente inutile, pas de surprise — un trajet fluide et confortable, avec prise en charge à l’heure souhaitée.
+    </p>
+    <p>
+      👉 <strong>Réservez dès maintenant</strong> au <a href="tel:0644120784">06 44 12 07 84</a> ou par
+      <a href="https://wa.me/33644120784" target="_blank" rel="noopener">WhatsApp</a>.
+    </p>
 
-    <h2>🕐 Mise à disposition</h2>
-    <p>Besoin d’un chauffeur pour plusieurs heures ? Nous proposons la mise à disposition d’un véhicule avec chauffeur pour vos rendez-vous professionnels ou événements privés.</p>
+    <h2>🕐 Mise à disposition à l’heure ou à la journée</h2>
+    <p>
+      Vous avez plusieurs déplacements prévus dans la même journée ? Vous souhaitez un chauffeur à disposition pour vos
+      <strong>rendez-vous professionnels, mariages, événements ou visites touristiques</strong> ?
+      OuassVTC vous propose un service de <strong>mise à disposition personnalisée</strong>,
+      avec un véhicule et un chauffeur qui restent à votre disposition aussi longtemps que nécessaire.
+    </p>
+    <p>C’est la solution idéale pour les clients qui recherchent flexibilité, confort et tranquillité.</p>
 
     <h2>📍 Trajets locaux & longues distances</h2>
-    <p>Que vous alliez à Perpignan ou dans une autre ville de France, nous réalisons vos trajets longue distance sur réservation.</p>
+    <p>
+      OuassVTC assure vos <strong>déplacements dans tout le bassin perpignanais</strong> :
+      <strong>Perpignan</strong>, <strong>Canet-en-Roussillon</strong>, <strong>Saint-Estève</strong>,
+      <strong>Argelès-sur-Mer</strong>, <strong>Le Barcarès</strong>, <strong>Toulouges</strong> et les communes voisines.
+    </p>
+    <p>
+      Nous réalisons également des <strong>trajets longue distance</strong>, vers la France entière et l’Espagne
+      (<strong>Barcelone</strong>, <strong>Gérone</strong>, <strong>Costa Brava</strong>, <strong>Narbonne</strong>, <strong>Montpellier</strong>…).
+      Nos tarifs sont <strong>fixes, transparents et sans frais cachés</strong>.
+    </p>
 
     <h2>💼 Déplacements professionnels</h2>
-    <p>Un service discret, fiable et efficace pour tous vos trajets professionnels, avec ou sans contrat régulier.</p>
+    <p>
+      OuassVTC accompagne aussi les <strong>entreprises, hôtels, administrations et agences</strong>.
+      Nous proposons des <strong>transferts réguliers</strong>, des <strong>accueils de clients</strong>,
+      des <strong>déplacements inter-sites</strong> ou encore des <strong>services de transport événementiel</strong>.
+    </p>
+    <ul>
+      <li>Chauffeur professionnel titulaire de la carte VTC</li>
+      <li>Discrétion, ponctualité et courtoisie</li>
+      <li>Facturation simple et claire</li>
+      <li>Adaptation à vos besoins (trajets ponctuels ou contrats récurrents)</li>
+    </ul>
+    <p>Un partenaire fiable pour tous vos déplacements d’affaires à Perpignan et au-delà.</p>
 
     <h2>💳 Paiement simplifié</h2>
-    <p>Paiement en espèces, carte bancaire ou mobile. Tarifs fixés à l’avance, pas de surprise.</p>
+    <p>Avec OuassVTC, le paiement est simple et flexible :</p>
+    <ul>
+      <li>💳 Carte bancaire à bord</li>
+      <li>🔗 Lien de paiement sécurisé avant le trajet</li>
+      <li>💶 Espèces acceptées</li>
+    </ul>
+    <p>
+      Aucun compteur, aucune surprise : le <strong>prix est fixé à l’avance</strong> au moment de la réservation.
+      Transparence, confort et confiance sont nos priorités.
+    </p>
+
+    <h2>📞 Réserver un VTC à Perpignan</h2>
+    <p>Réserver votre trajet n’a jamais été aussi simple :</p>
+    <ul>
+      <li>📱 <strong>Téléphone</strong> : <a href="tel:0644120784">06 44 12 07 84</a></li>
+      <li>💬 <strong>WhatsApp</strong> : <a href="https://wa.me/33644120784" target="_blank" rel="noopener">Cliquez ici pour discuter</a></li>
+      <li>📧 <strong>Email</strong> : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a></li>
+      <li>🖥️ <strong>Formulaire en ligne</strong> disponible sur le site</li>
+    </ul>
+    <p>Votre chauffeur est disponible <strong>24h/24 et 7j/7</strong> pour tous vos trajets.</p>
+
+    <h2>❓ Questions fréquentes</h2>
+    <p><strong>→ Le tarif est-il fixe ?</strong> Oui, le prix est défini à l’avance selon la distance et le trajet. Aucun supplément imprévu.</p>
+    <p><strong>→ Intervenez-vous en Espagne ?</strong> Oui, régulièrement pour des transferts vers <strong>Barcelone</strong>, <strong>Gérone</strong> et la <strong>Costa Brava</strong>.</p>
+    <p><strong>→ Peut-on réserver de nuit ?</strong> Oui, OuassVTC est disponible 24h/24, sur simple réservation préalable.</p>
+    <p><strong>→ Acceptez-vous les animaux ou les bagages volumineux ?</strong> Oui, sur demande au moment de la réservation pour prévoir le véhicule adapté.</p>
+
+    <h2>🌍 Zones desservies</h2>
+    <p>OuassVTC intervient dans tout le département des <strong>Pyrénées-Orientales (66)</strong> :</p>
+    <ul>
+      <li>Perpignan</li>
+      <li>Saint-Estève</li>
+      <li>Canet-en-Roussillon</li>
+      <li>Argelès-sur-Mer</li>
+      <li>Le Barcarès</li>
+      <li>Toulouges</li>
+      <li>Saleilles</li>
+      <li>Rivesaltes</li>
+      <li>Et toutes les communes voisines</li>
+    </ul>
+    <p>Nous effectuons également des trajets longue distance vers <strong>Barcelone</strong>, <strong>Toulouse</strong>, <strong>Montpellier</strong> ou <strong>Béziers</strong>.</p>
+
+    <h2>🚗 Votre satisfaction, notre priorité</h2>
+    <p>
+      Avec OuassVTC, chaque trajet est effectué avec sérieux, confort et courtoisie.
+      Notre objectif : vous offrir un <strong>service VTC à Perpignan</strong> fiable, accessible et professionnel,
+      que vous voyagiez seul, en couple, en famille ou pour le travail.
+    </p>
+    <p style="font-weight:600;">OuassVTC – votre chauffeur privé à Perpignan, disponible 24h/24.</p>
   </main>
 
-  <!-- Bouton flottant -->
-  <button id="btnRetour" class="btn-black">⬅️ Retour à l’accueil</button>
-
-  <footer>© 2025 OuassVTC - Tous droits réservés.</footer>
-
-  <script>
-    // Bouton dynamique : retour ou redirection
-    document.getElementById("btnRetour").addEventListener("click", function(){
-      if (document.referrer && document.referrer !== window.location.href) {
-        window.history.back();
-      } else {
-        window.location.href = "index.html";
-      }
-    });
-  </script>
+  <footer>
+    © 2025 OuassVTC - Tous droits réservés.
+  </footer>
 
 </body>
 </html>
